--- a/sd-template.yaml
+++ b/sd-template.yaml
@@ -1,4 +1,4 @@
-namespace: dsagar
+namespace: sagar1312
 name: sd-template-parameters
 version: "1"
 description: An example template for testing parameters
