--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,16 +1,16 @@
 shared:
-  image: node:12
+  image: node:14
 
 jobs:
   validate:
     requires: [~pr, ~commit]
     steps:
-      - install_prerequisites: npm install -g screwdriver-template-main
+      - install_prerequisites: npm install screwdriver-template-main
       - validate_default_template: ./node_modules/.bin/template-validate
 
   publish:
     requires: [ validate ]
     steps:
-      - install_prerequisites: npm install -g screwdriver-template-main
+      - install_prerequisites: npm install screwdriver-template-mainn
       - publish: ./node_modules/.bin/template-publish
       - autotag: ./node_modules/.bin/template-tag --name sagar1312/sd-template-parameters --tag latest
